WIP - refactoring for data mgmt QOL

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "from spacv.visualisation import plot_autocorrelation_ranges\n",
     "from TrainModelConfig import TrainModelConfig\n",
-    "from utils.data_retrieval import all_gdfs\n",
+    "from utils.data_retrieval import gdf_from_list\n",
     "from utils.geodata import drop_XY_NAs, merge_gdfs\n",
     "from utils.training import run_training\n",
     "from utils.visualize import plot_splits\n",
@@ -58,19 +58,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_fns = config.WC_fns + config.MODIS_fns + config.soil_fns\n",
-    "Y_fns = config.iNat_fns\n",
+    "from utils.datasets import Dataset, DatasetInfo, FileExt, Unit\n",
+    "from utils.datasets import DataCollection\n",
     "\n",
-    "X = all_gdfs(X_fns)\n",
-    "Y = all_gdfs(Y_fns)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Compute Preciptation Annual Range by subtracting BIO14 from BIO13"
+    "inat_info = DatasetInfo(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=config.iNat_dir,\n",
+    "    file_ext=FileExt.TIF,\n",
+    "    collection_name=config.iNat_name,\n",
+    "    transform=\"ln\",\n",
+    ")\n",
+    "\n",
+    "wc_info = DatasetInfo(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=config.WC_dir,\n",
+    "    file_ext=FileExt.TIF,\n",
+    "    collection_name=config.WC_name,\n",
+    "    bio_ids=config.WC_bio_ids,\n",
+    ")\n",
+    "\n",
+    "modis_info = DatasetInfo(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=config.MODIS_dir,\n",
+    "    file_ext=FileExt.TIF,\n",
+    "    collection_name=config.MODIS_name,\n",
+    ")\n",
+    "\n",
+    "soil_info = DatasetInfo(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=config.soil_dir,\n",
+    "    file_ext=FileExt.TIF,\n",
+    "    collection_name=config.soil_name,\n",
+    ")\n",
+    "\n",
+    "inat = Dataset(info=inat_info)\n",
+    "wc = Dataset(info=wc_info)\n",
+    "modis = Dataset(info=modis_info)\n",
+    "soil = Dataset(info=soil_info)\n",
+    "\n",
+    "X = DataCollection([wc, modis, soil])\n",
+    "Y = DataCollection([inat])\n"
    ]
   },
   {
@@ -79,27 +110,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bio_13 = X.loc[:, [\"bio_13\" in x for x in X.columns]].values\n",
-    "bio_14 = X.loc[:, [\"bio_14\" in x for x in X.columns]].values\n",
-    "X[\"wc2.1_10m_bio_13-14\"] = bio_13 - bio_14"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Drop the unnecessary `x`, `y`, `band` and `spatial_ref` columns."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = X.drop(columns=[\"x\", \"y\", \"band\", \"spatial_ref\"])\n",
-    "Y = Y.drop(columns=[\"x\", \"y\", \"band\", \"spatial_ref\"])"
+    "from utils.datasets import MLCollection\n",
+    "\n",
+    "\n",
+    "XY = MLCollection(X, Y)\n",
+    "print(\"XY shape:\", XY.df.shape)\n",
+    "\n",
+    "XY.drop_NAs(verbose=1)"
    ]
   },
   {
@@ -131,68 +148,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combine GDFs and clean up nodata"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get column names for easier predictor/response variable selection."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_cols = X.columns.difference([\"geometry\"])\n",
-    "Y_cols = Y.columns.difference([\"geometry\"])"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Merge X and Y GDFs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "XY = merge_gdfs([X, Y])\n",
-    "print(\"X shape:\", XY[X_cols].shape)\n",
-    "print(\"Y shape:\", XY[Y_cols].shape)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Drop all-NA rows and columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "XY, X_cols, Y_cols = drop_XY_NAs(XY, X_cols, Y_cols, True)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Calculate autocorrelation range of predictors and generate spatial folds for spatial cross-validation"
    ]
   },
@@ -204,7 +159,7 @@
    "source": [
     "if config.SAVE_AUTOCORRELATION_RANGES:\n",
     "    coords = XY[\"geometry\"]\n",
-    "    data = XY[X_cols]\n",
+    "    data = XY[X.cols]\n",
     "    \n",
     "    _, _, ranges = plot_autocorrelation_ranges(\n",
     "        coords, data, config.LAGS, config.BW, distance_metric=\"haversine\", workers=10\n",
@@ -228,11 +183,11 @@
    "outputs": [],
    "source": [
     "y_col = \"iNat_Stem.conduit.density_05deg_ln\"\n",
-    "sample_Xy = XY[[\"geometry\", *X_cols, y_col]]\n",
+    "sample_Xy = XY.df[[\"geometry\", *XY.X.cols, y_col]]\n",
     "\n",
     "# Drop full-NAs\n",
     "sample_Xy, sample_X_cols, sample_y_col = drop_XY_NAs(\n",
-    "    sample_Xy, X_cols, y_col, True\n",
+    "    sample_Xy, XY.X.cols, y_col, True\n",
     ")\n",
     "\n",
     "# Sample X data on which split dissimilarity will be measured\n",
@@ -298,7 +253,7 @@
     "\n",
     "    Xy = XY[[\"geometry\", *X_cols, y_col]]\n",
     "\n",
-    "    Xy, X_cols, y_col = drop_XY_NAs(Xy, X_cols, y_col, True)\n",
+    "    Xy, X_cols, y_col = drop_NAs(Xy, X_cols, y_col, True)\n",
     "\n",
     "    model_fn, params, rmse, std, r2 = run_training(\n",
     "        Xy=Xy,\n",
