add new data and training classes, make training more organized and simpler

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -33,13 +33,15 @@
     "\n",
     "from spacv.visualisation import plot_autocorrelation_ranges\n",
     "from TrainModelConfig import TrainModelConfig\n",
-    "from utils.data_retrieval import gdf_from_list\n",
-    "from utils.geodata import drop_XY_NAs, merge_gdfs\n",
-    "from utils.training import run_training\n",
+    "from utils.geodata import drop_XY_NAs\n",
     "from utils.visualize import plot_splits\n",
+    "from utils.datasets import DataCollection, Dataset, MLCollection, Unit\n",
     "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "NOTEBOOK = True\n",
+    "\n",
+    "if NOTEBOOK:\n",
+    "    %load_ext autoreload\n",
+    "    %autoreload 2\n",
     "\n",
     "config = TrainModelConfig()"
    ]
@@ -58,61 +60,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.datasets import Dataset, DatasetInfo, FileExt, Unit\n",
-    "from utils.datasets import DataCollection\n",
-    "\n",
-    "inat_info = DatasetInfo(\n",
+    "inat = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=config.iNat_dir,\n",
-    "    file_ext=FileExt.TIF,\n",
     "    collection_name=config.iNat_name,\n",
     "    transform=\"ln\",\n",
     ")\n",
     "\n",
-    "wc_info = DatasetInfo(\n",
+    "wc = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=config.WC_dir,\n",
-    "    file_ext=FileExt.TIF,\n",
     "    collection_name=config.WC_name,\n",
     "    bio_ids=config.WC_bio_ids,\n",
     ")\n",
     "\n",
-    "modis_info = DatasetInfo(\n",
+    "modis = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=config.MODIS_dir,\n",
-    "    file_ext=FileExt.TIF,\n",
     "    collection_name=config.MODIS_name,\n",
     ")\n",
     "\n",
-    "soil_info = DatasetInfo(\n",
+    "soil = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=config.soil_dir,\n",
-    "    file_ext=FileExt.TIF,\n",
     "    collection_name=config.soil_name,\n",
     ")\n",
     "\n",
-    "inat = Dataset(info=inat_info)\n",
-    "wc = Dataset(info=wc_info)\n",
-    "modis = Dataset(info=modis_info)\n",
-    "soil = Dataset(info=soil_info)\n",
-    "\n",
     "X = DataCollection([wc, modis, soil])\n",
-    "Y = DataCollection([inat])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.datasets import MLCollection\n",
+    "Y = DataCollection([inat])\n",
     "\n",
-    "\n",
+    "# Convert to MLCollection for training\n",
     "XY = MLCollection(X, Y)\n",
     "print(\"XY shape:\", XY.df.shape)\n",
     "\n",
@@ -182,40 +163,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_col = \"iNat_Stem.conduit.density_05deg_ln\"\n",
-    "sample_Xy = XY.df[[\"geometry\", *XY.X.cols, y_col]]\n",
+    "if config.EXPLORE_SPLITS:\n",
+    "    y_col = \"iNat_Stem.conduit.density_05deg_ln\"\n",
+    "    sample_Xy = XY.df[[\"geometry\", *XY.X.cols, y_col]]\n",
     "\n",
-    "# Drop full-NAs\n",
-    "sample_Xy, sample_X_cols, sample_y_col = drop_XY_NAs(\n",
-    "    sample_Xy, XY.X.cols, y_col, True\n",
-    ")\n",
+    "    # Drop full-NAs\n",
+    "    sample_Xy, sample_X_cols, sample_y_col = drop_XY_NAs(\n",
+    "        sample_Xy, XY.X.cols, y_col, True\n",
+    "    )\n",
     "\n",
-    "# Sample X data on which split dissimilarity will be measured\n",
-    "sample_data = sample_Xy[sample_X_cols]\n",
-    "sample_locs = sample_Xy[\"geometry\"]\n",
+    "    # Sample X data on which split dissimilarity will be measured\n",
+    "    sample_data = sample_Xy[sample_X_cols]\n",
+    "    sample_locs = sample_Xy[\"geometry\"]\n",
     "\n",
-    "# Grid settings\n",
-    "tile = config.AUTOCORRELATION_RANGE / config.DEGREE\n",
-    "tiles_x = int(np.round(360 / tile))\n",
-    "tiles_y = int(np.round(180 / tile))\n",
+    "    # Grid settings\n",
+    "    tile = config.AUTOCORRELATION_RANGE / config.DEGREE\n",
+    "    tiles_x = int(np.round(360 / tile))\n",
+    "    tiles_y = int(np.round(180 / tile))\n",
     "\n",
-    "# Spatial blocking\n",
-    "hblock = spacv.HBLOCK(\n",
-    "    tiles_x,\n",
-    "    tiles_y,\n",
-    "    shape=\"hex\",\n",
-    "    method=\"optimized_random\",\n",
-    "    buffer_radius=0.01,\n",
-    "    n_groups=10,\n",
-    "    data=sample_data,\n",
-    "    n_sims=50,\n",
-    "    distance_metric=\"haversine\",\n",
-    "    random_state=config.RNG_STATE,\n",
-    ")\n",
+    "    # Spatial blocking\n",
+    "    hblock = spacv.HBLOCK(\n",
+    "        tiles_x,\n",
+    "        tiles_y,\n",
+    "        shape=\"hex\",\n",
+    "        method=\"optimized_random\",\n",
+    "        buffer_radius=0.01,\n",
+    "        n_groups=10,\n",
+    "        data=sample_data,\n",
+    "        n_sims=50,\n",
+    "        distance_metric=\"haversine\",\n",
+    "        random_state=config.RNG_STATE,\n",
+    "    )\n",
     "\n",
-    "# Plot splits\n",
-    "print(f\"Tile size: {tile:.2f} degrees\")\n",
-    "plot_splits(hblock, sample_locs)"
+    "    # Plot splits\n",
+    "    print(f\"Tile size: {tile:.2f} degrees\")\n",
+    "    plot_splits(hblock, sample_locs)"
    ]
   },
   {
@@ -232,48 +214,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_time = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "if config.TRAIN_MODE:\n",
+    "    XY.train_collection(config.training_config)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Debugging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if config.DEBUG:\n",
+    "    from utils.training import block_cv_splits, optimize_params\n",
+    "    from os import path\n",
+    "    import pathlib\n",
+    "    from utils.training import TrainingConfig\n",
     "\n",
-    "param_opt_run_dir = os.path.join(config.PARAM_OPT_RESULTS_DIR, run_time)\n",
-    "results_dir = os.path.join(config.MODEL_DIR, run_time)\n",
-    "\n",
-    "if not os.path.exists(param_opt_run_dir):\n",
-    "    os.makedirs(param_opt_run_dir)\n",
-    "\n",
-    "if not os.path.exists(results_dir):\n",
-    "    os.makedirs(results_dir)\n",
-    "\n",
-    "results_fn = os.path.join(results_dir, f\"{run_time}_results.csv\")\n",
-    "data_cols = [\"model\", \"params\", \"mean rmse\", \"std\", \"r-squared\"]\n",
-    "results_df = pd.DataFrame(columns=data_cols)\n",
-    "\n",
-    "for y_col in Y_cols:\n",
-    "    print(f\"Processing {y_col}...\\n\")\n",
-    "    run_name = f\"{run_time}_{y_col}\"\n",
-    "\n",
-    "    Xy = XY[[\"geometry\", *X_cols, y_col]]\n",
-    "\n",
-    "    Xy, X_cols, y_col = drop_NAs(Xy, X_cols, y_col, True)\n",
-    "\n",
-    "    model_fn, params, rmse, std, r2 = run_training(\n",
-    "        Xy=Xy,\n",
-    "        X_cols=X_cols,\n",
-    "        y_col=y_col,\n",
-    "        autocorr_range=config.AUTOCORRELATION_RANGE,\n",
-    "        search_n_trials=100,\n",
-    "        n_jobs=-1,\n",
-    "        random_state=config.RNG_STATE,\n",
-    "        param_opt_save_dir=param_opt_run_dir,\n",
-    "        final_save_dir=results_dir,\n",
-    "        run_name=run_name,\n",
+    "    results_dir = pathlib.Path(config.RESULTS_DIR, \"test\")\n",
+    "    results_csv = pathlib.Path(results_dir, \"training_results.csv\")\n",
+    "    train_config = TrainingConfig(\n",
+    "        cv_n_groups=2, search_n_trials=2, results_dir=results_dir, results_csv=results_csv\n",
     "    )\n",
-    "    results = [model_fn, params, rmse, std, r2]\n",
-    "    new_df = pd.DataFrame([results], columns=data_cols)\n",
-    "    results_df = pd.concat([results_df, new_df])\n",
     "\n",
-    "    results_df.to_csv(os.path.join(config.MODEL_DIR, results_fn))\n",
+    "    y_col = XY.Y.cols[0]\n",
     "\n",
-    "results_df"
+    "    Xy = XY.df[[\"geometry\", *XY.X.cols, y_col]]\n",
+    "    Xy, X_cols, y_cols = drop_XY_NAs(Xy, XY.X.cols, y_col, True)\n",
+    "\n",
+    "    X = Xy[X_cols].to_numpy()\n",
+    "    y = Xy[y_col].to_numpy()\n",
+    "    coords = Xy[\"geometry\"]\n",
+    "\n",
+    "    cv = block_cv_splits(\n",
+    "        X=X,\n",
+    "        coords=coords,\n",
+    "        grid_size=train_config.cv_grid_size,\n",
+    "        n_groups=train_config.cv_n_groups,\n",
+    "        random_state=train_config.random_state,\n",
+    "        verbose=1,\n",
+    "    )\n",
+    "\n",
+    "    reg = optimize_params(\n",
+    "        X=X,\n",
+    "        y=y,\n",
+    "        col_name=y_col,\n",
+    "        cv=cv,\n",
+    "        save_dir=train_config.results_dir,\n",
+    "        n_trials=train_config.search_n_trials,\n",
+    "        random_state=train_config.random_state,\n",
+    "    )"
    ]
   }
  ],
