Improved results reporting, improved typing

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -24,9 +24,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
-    "import os\n",
-    "\n",
     "import numpy as np\n",
     "import spacv\n",
     "import pandas as pd\n",
@@ -138,10 +135,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "type(XY.X.df[[\"geometry\", *XY.X.cols]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if config.SAVE_AUTOCORRELATION_RANGES:\n",
-    "    coords = XY[\"geometry\"]\n",
-    "    data = XY[X.cols]\n",
-    "    \n",
+    "    coords = XY.df[\"geometry\"]\n",
+    "    data = XY.df[XY.X.cols]\n",
+    "\n",
     "    _, _, ranges = plot_autocorrelation_ranges(\n",
     "        coords, data, config.LAGS, config.BW, distance_metric=\"haversine\", workers=10\n",
     "    )\n",
@@ -197,7 +203,7 @@
     "\n",
     "    # Plot splits\n",
     "    print(f\"Tile size: {tile:.2f} degrees\")\n",
-    "    plot_splits(hblock, sample_locs)"
+    "    plot_splits(hblock, sample_locs)\n"
    ]
   },
   {
@@ -214,8 +220,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "################### TRAINING  ####################\n",
     "if config.TRAIN_MODE:\n",
-    "    XY.train_collection(config.training_config)"
+    "    XY.train_Y_models(config.training_config, y_idx=[-1], resume=True)\n",
+    "##################################################\n"
    ]
   },
   {
@@ -234,14 +242,16 @@
    "source": [
     "if config.DEBUG:\n",
     "    from utils.training import block_cv_splits, optimize_params\n",
-    "    from os import path\n",
     "    import pathlib\n",
     "    from utils.training import TrainingConfig\n",
     "\n",
     "    results_dir = pathlib.Path(config.RESULTS_DIR, \"test\")\n",
     "    results_csv = pathlib.Path(results_dir, \"training_results.csv\")\n",
     "    train_config = TrainingConfig(\n",
-    "        cv_n_groups=2, search_n_trials=2, results_dir=results_dir, results_csv=results_csv\n",
+    "        cv_n_groups=2,\n",
+    "        search_n_trials=2,\n",
+    "        results_dir=results_dir,\n",
+    "        results_csv=results_csv,\n",
     "    )\n",
     "\n",
     "    y_col = XY.Y.cols[0]\n",
@@ -270,7 +280,7 @@
     "        save_dir=train_config.results_dir,\n",
     "        n_trials=train_config.search_n_trials,\n",
     "        random_state=train_config.random_state,\n",
-    "    )"
+    "    )\n"
    ]
   }
  ],
