--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "if config.resamp_to_disk:\n",
-    "    # Downsample MODIS data and save to disk\n",
+    "    # Downsample WC data and save to disk\n",
     "    fns_og = sorted(glob.glob(os.path.join(config.WC_dir, \"10_min/*.tif\")))\n",
     "\n",
     "    for f in fns_og:\n",
