add staticmethod for dataset resampling

--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -33,18 +33,19 @@
     "import ee\n",
     "import rioxarray as riox\n",
     "import utils.geodata as geodata\n",
-    "import utils.gee as gee\n",
+    "# import utils.gee as gee\n",
     "import utils.gdal as gdal\n",
     "from PreprocessingConfig import PreprocessingConfig\n",
     "from tqdm.notebook import tqdm\n",
+    "from utils.datasets import Dataset, Unit, resample_dataset\n",
     "\n",
-    "from visualize import plot_traits, plot_rasterio\n",
+    "from utils.visualize import plot_traits, plot_rasterio\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "# ee.Authenticate() # Uncomment if not already authenticated\n",
-    "ee.Initialize()\n",
+    "# ee.Initialize()\n",
     "\n",
     "# Load configuration\n",
     "config = PreprocessingConfig()"
@@ -125,26 +126,26 @@
    "id": "f0a12e00",
    "metadata": {},
    "source": [
-    "Load the tifs and resample to 0.5 degrees"
+    "Load the tifs and resample to all resolutions needed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca10be62",
+   "id": "fe6e8a99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if config.resamp_to_disk:\n",
-    "    # Downsample WC data and save to disk\n",
-    "    fns_og = sorted(glob.glob(os.path.join(config.WC_dir, \"10_min/*.tif\")))\n",
+    "wc = Dataset(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=config.WC_dir,\n",
+    "    collection_name=config.WC_name,\n",
+    "    # bio_ids=config.WC_bio_ids,\n",
+    ")\n",
     "\n",
-    "    for f in fns_og:\n",
-    "        base = os.path.splitext(os.path.basename(f))[0].split(\"10m\")\n",
-    "        base = base[0] + \"0.5_deg\" + base[-1]\n",
-    "        out_fn = os.path.join(config.WC_dir, \"0.5_deg\", f\"{base}.tif\")\n",
-    "        ds = gdal.resample_gdal(f, out_fn)\n",
-    "        del ds"
+    "if config.resamp_to_disk:\n",
+    "    resample_dataset(dataset=wc, resolution=2, unit=Unit.DEGREE)"
    ]
   },
   {
@@ -268,48 +269,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6c4f912",
+   "id": "81239eed",
    "metadata": {},
    "outputs": [],
    "source": [
+    "modis = Dataset(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=config.MODIS_dir,\n",
+    "    collection_name=config.MODIS_name,\n",
+    ")\n",
+    "\n",
+    "\n",
     "if config.resamp_to_disk:\n",
-    "    # Downsample MODIS data and save to disk\n",
-    "    fns_1km = sorted(glob.glob(os.path.join(config.MODIS_dir, \"1km/*.tif\")))\n",
-    "\n",
-    "    for f in tqdm(fns_1km):\n",
-    "        base = os.path.splitext(os.path.basename(f))[0].split(\"_1000m\")[0]\n",
-    "        out_fn = os.path.join(config.MODIS_dir, \"0.5_deg\", f\"{base}_0.5_deg.tif\")\n",
-    "        ds = gdal.resample_gdal(f, out_fn)\n",
-    "        del ds"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "6c3df7c6",
-   "metadata": {},
-   "source": [
-    "7. Convert to GeoDataFrames and merge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b9539d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modis_fns = config.MODIS_fns\n",
-    "\n",
-    "modis = []\n",
-    "for modis_fn in modis_fns:\n",
-    "    name = os.path.splitext(os.path.basename(modis_fn))[0]\n",
-    "    obs = riox.open_rasterio(modis_fn, masked=True)\n",
-    "    obs.name = name\n",
-    "    modis.append(obs)\n",
-    "\n",
-    "modis_gdfs = geodata.merge_gdfs([geodata.tif2gdf(obs) for obs in modis])\n",
-    "modis_gdfs.head(5)"
+    "    resample_dataset(dataset=modis, resolution=2, unit=Unit.DEGREE)"
    ]
   },
   {
@@ -352,23 +325,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c0b275a",
+   "id": "4ece07ee",
    "metadata": {},
    "outputs": [],
    "source": [
+    "soil = Dataset(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=config.soil_dir,\n",
+    "    collection_name=config.soil_name,\n",
+    ")\n",
+    "\n",
     "if config.resamp_to_disk:\n",
-    "    # Downsample soil data and save to disk\n",
-    "    p_dirs = sorted(glob.glob(os.path.join(config.soil_dir, \"*\")))\n",
-    "\n",
-    "    for d in p_dirs:\n",
-    "        fns_1km = sorted(glob.glob(os.path.join(d, \"1km/*.tif\")))\n",
-    "\n",
-    "        for f in fns_1km:\n",
-    "            base = os.path.splitext(os.path.basename(f))[0].split(\"_1000m\")[0]\n",
-    "            out_fn = os.path.join(d, \"0.5_deg\", f\"{base}_0.5_deg.tif\")\n",
-    "            # print(out_fn)\n",
-    "            ds = gdal.resample_gdal(f, out_fn)\n",
-    "            del ds"
+    "    resample_dataset(dataset=soil, resolution=2, unit=Unit.DEGREE)"
    ]
   },
   {
