add inat DGVM support and add short form to CollectionName

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -32,7 +32,8 @@
     "from TrainModelConfig import TrainModelConfig\n",
     "from utils.geodata import drop_XY_NAs\n",
     "from utils.visualize import plot_splits\n",
-    "from utils.datasets import DataCollection, Dataset, MLCollection, Unit\n",
+    "from utils.datasets import DataCollection, Dataset, MLCollection, Unit, CollectionName\n",
+    "import pathlib\n",
     "\n",
     "NOTEBOOK = True\n",
     "\n",
@@ -57,11 +58,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inat = Dataset(\n",
+    "inat_orig = Dataset(\n",
     "    res=0.5,\n",
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=config.iNat_dir,\n",
     "    collection_name=config.iNat_name,\n",
+    "    transform=\"ln\",\n",
+    ")\n",
+    "\n",
+    "inat_dgvm = Dataset(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=pathlib.Path(\"./iNaturalist_traits/maps_iNaturalist/DGVM/continuous_traits/\"),\n",
+    "    collection_name=CollectionName.INAT_DGVM,\n",
     "    transform=\"ln\",\n",
     ")\n",
     "\n",
@@ -88,7 +97,7 @@
     ")\n",
     "\n",
     "X = DataCollection([wc, modis, soil])\n",
-    "Y = DataCollection([inat])\n",
+    "Y = DataCollection([inat_orig, inat_dgvm])\n",
     "\n",
     "# Convert to MLCollection for training\n",
     "XY = MLCollection(X, Y)\n",
