add config abstraction; improve results reporting

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -144,15 +144,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(XY.X.df[[\"geometry\", *XY.X.cols]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if config.SAVE_AUTOCORRELATION_RANGES:\n",
     "    coords = XY.df[\"geometry\"]\n",
     "    data = XY.df[XY.X.cols]\n",
@@ -192,9 +183,8 @@
     "    sample_locs = sample_Xy[\"geometry\"]\n",
     "\n",
     "    # Grid settings\n",
-    "    tile = config.AUTOCORRELATION_RANGE / config.DEGREE\n",
-    "    tiles_x = int(np.round(360 / tile))\n",
-    "    tiles_y = int(np.round(180 / tile))\n",
+    "    tiles_x = int(np.round(360 / config.AUTOCORRELATION_RANGE))\n",
+    "    tiles_y = int(np.round(180 / config.AUTOCORRELATION_RANGE))\n",
     "\n",
     "    # Spatial blocking\n",
     "    hblock = spacv.HBLOCK(\n",
@@ -211,7 +201,7 @@
     "    )\n",
     "\n",
     "    # Plot splits\n",
-    "    print(f\"Tile size: {tile:.2f} degrees\")\n",
+    "    print(f\"Tile size: {config.AUTOCORRELATION_RANGE:.2f} degrees\")\n",
     "    plot_splits(hblock, sample_locs)\n"
    ]
   },
@@ -231,7 +221,8 @@
    "source": [
     "################### TRAINING  ####################\n",
     "if config.TRAIN_MODE:\n",
-    "    XY.train_Y_models(config.training_config, y_idx=[-1], resume=True)\n",
+    "    config = TrainModelConfig()\n",
+    "    XY.train_Y_models(config.training_config, resume=True)\n",
     "##################################################\n"
    ]
   },
@@ -249,19 +240,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from utils.training import train_model_full\n",
+    "\n",
+    "\n",
     "if config.DEBUG:\n",
     "    from utils.training import block_cv_splits, optimize_params\n",
-    "    import pathlib\n",
-    "    from utils.training import TrainingConfig\n",
-    "\n",
-    "    results_dir = pathlib.Path(config.RESULTS_DIR, \"test\")\n",
-    "    results_csv = pathlib.Path(results_dir, \"training_results.csv\")\n",
-    "    train_config = TrainingConfig(\n",
-    "        cv_n_groups=2,\n",
-    "        search_n_trials=2,\n",
-    "        results_dir=results_dir,\n",
-    "        results_csv=results_csv,\n",
-    "    )\n",
     "\n",
     "    y_col = XY.Y.cols[0]\n",
     "\n",
@@ -272,24 +257,38 @@
     "    y = Xy[y_col].to_numpy()\n",
     "    coords = Xy[\"geometry\"]\n",
     "\n",
+    "    X_train, X_test, y_train, y_test, coords_train, coords_test = train_test_split(\n",
+    "        X, y, coords, test_size=0.2\n",
+    "    )\n",
+    "\n",
     "    cv = block_cv_splits(\n",
-    "        X=X,\n",
-    "        coords=coords,\n",
-    "        grid_size=train_config.cv_grid_size,\n",
-    "        n_groups=train_config.cv_n_groups,\n",
-    "        random_state=train_config.random_state,\n",
+    "        X=X_train,\n",
+    "        coords=coords_train,\n",
+    "        grid_size=config.training_config.cv_grid_size,\n",
+    "        n_groups=config.training_config.cv_n_groups,\n",
+    "        random_state=config.training_config.random_state,\n",
     "        verbose=1,\n",
     "    )\n",
     "\n",
     "    reg = optimize_params(\n",
-    "        X=X,\n",
-    "        y=y,\n",
+    "        X=X_train,\n",
+    "        y=y_train,\n",
     "        col_name=y_col,\n",
     "        cv=cv,\n",
-    "        save_dir=train_config.results_dir,\n",
-    "        n_trials=train_config.search_n_trials,\n",
-    "        random_state=train_config.random_state,\n",
-    "    )\n"
+    "        save_dir=config.training_config.results_dir,\n",
+    "        n_trials=config.training_config.search_n_trials,\n",
+    "        random_state=config.training_config.random_state,\n",
+    "        verbose=1,\n",
+    "    )\n",
+    "\n",
+    "    model, r2 = train_model_full(\n",
+    "        model_params=reg.best_params_,\n",
+    "        X_train=X_train,\n",
+    "        y_train=y_train,\n",
+    "        X_test=X_test,\n",
+    "        y_test=y_test,\n",
+    "        verbose=1,\n",
+    "    )"
    ]
   }
  ],
