Move Unit and FileExt to own file to avoid circular importing with dataset.py

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -32,8 +32,8 @@
     "from TrainModelConfig import TrainModelConfig\n",
     "from utils.geodata import drop_XY_NAs\n",
     "from utils.visualize import plot_splits\n",
-    "from utils.datasets import DataCollection, Dataset, MLCollection, Unit, CollectionName\n",
-    "import pathlib\n",
+    "from utils.datasets import DataCollection, Dataset, MLCollection, CollectionName\n",
+    "from utils.dataset_tools import Unit, FileExt\n",
     "\n",
     "NOTEBOOK = True\n",
     "\n",
