resample VODCA data; add VODCA handler

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -34,6 +34,7 @@
     "from utils.visualize import plot_splits\n",
     "from utils.datasets import DataCollection, Dataset, MLCollection, CollectionName\n",
     "from utils.dataset_tools import Unit, FileExt\n",
+    "from pathlib import Path\n",
     "\n",
     "NOTEBOOK = True\n",
     "\n",
@@ -94,6 +95,14 @@
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=config.soil_dir,\n",
     "    collection_name=config.soil_name,\n",
+    ")\n",
+    "\n",
+    "vodca = Dataset(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=Path(\"./data/vodca/\"),\n",
+    "    collection_name=CollectionName.VODCA,\n",
+    "    file_ext=FileExt.NETCDF4,\n",
     ")\n",
     "\n",
     "X = DataCollection([wc, modis, soil])\n",
