add outlier filtering

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -87,6 +87,7 @@
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=Path(\"./iNaturalist_traits/maps_GBIF/traitmaps/TRY_gap_filled/\"),\n",
     "    collection_name=CollectionName.INAT_GBIF,\n",
+    "    # filter_outliers=config.training_config.filter_y_outliers,\n",
     ")\n",
     "\n",
     "wc = Dataset(\n",
