add splot dataset

--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -71,7 +71,7 @@
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=config.iNat_dir,\n",
     "    collection_name=config.iNat_name,\n",
-    "    transform=\"ln\",\n",
+    "    transform=\"exp_ln\",\n",
     ")\n",
     "\n",
     "inat_dgvm = Dataset(\n",
@@ -79,7 +79,7 @@
     "    unit=Unit.DEGREE,\n",
     "    parent_dir=Path(\"./iNaturalist_traits/maps_iNaturalist/DGVM/continuous_traits/\"),\n",
     "    collection_name=CollectionName.INAT_DGVM,\n",
-    "    transform=\"ln\",\n",
+    "    transform=\"exp_ln\",\n",
     ")\n",
     "\n",
     "inat_gbif = Dataset(\n",
@@ -88,6 +88,14 @@
     "    parent_dir=Path(\"./iNaturalist_traits/maps_GBIF/traitmaps/TRY_gap_filled/\"),\n",
     "    collection_name=CollectionName.INAT_GBIF,\n",
     "    # filter_outliers=config.training_config.filter_y_outliers,\n",
+    ")\n",
+    "\n",
+    "splot = Dataset(\n",
+    "    res=0.5,\n",
+    "    unit=Unit.DEGREE,\n",
+    "    parent_dir=config.splot_dir,\n",
+    "    collection_name=CollectionName.SPLOT,\n",
+    "    transform=\"exp_ln\"\n",
     ")\n",
     "\n",
     "wc = Dataset(\n",
