--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train models for each response variable"
+    "### Train models for each response variable (better to use `2-TrainModel.py` script now)"
    ]
   },
   {
@@ -268,6 +268,97 @@
     "    config = TrainModelConfig()\n",
     "    XY.train_Y_models(config.training_config, resume=True)\n",
     "##################################################\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tighten hyperparameter ranges based on results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import ast\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pd.read_csv(\"results/training_results.csv\")\n",
+    "params = results[\"Best parameters\"]\n",
+    "params = [ast.literal_eval(p) for p in params if p is not np.nan]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from scipy.stats import gaussian_kde\n",
+    "\n",
+    "# create a list of parameter names\n",
+    "param_names = list(params[0].keys())\n",
+    "\n",
+    "# calculate the number of rows and columns needed for the subplots\n",
+    "n_rows = len(param_names) // 3 + len(param_names) % 3\n",
+    "n_cols = 3\n",
+    "\n",
+    "# create a figure with 3 columns of subplots\n",
+    "fig, axs = plt.subplots(n_rows, n_cols, figsize=(16, 6*n_rows))\n",
+    "\n",
+    "# create a box and whisker plot for each parameter\n",
+    "for i, name in enumerate(param_names):\n",
+    "    # calculate the row and column index for this subplot\n",
+    "    row = i // n_cols\n",
+    "    col = i % n_cols\n",
+    "\n",
+    "    # create a list of parameter values for this parameter\n",
+    "    param_values = [d[name] for d in params]\n",
+    "\n",
+    "    # calculate the quartile values\n",
+    "    q1, median, q3 = np.percentile(param_values, [25, 50, 75])\n",
+    "\n",
+    "    # create a box and whisker plot for this parameter\n",
+    "    axs[row, col].boxplot(param_values)\n",
+    "\n",
+    "    # set informative x-axis labels and title\n",
+    "    axs[row, col].set_xticklabels([name])\n",
+    "    axs[row, col].set_xlabel(\"Parameter\")\n",
+    "    axs[row, col].set_ylabel(\"Value\")\n",
+    "    axs[row, col].set_title(f\"Distribution of {name}\")\n",
+    "\n",
+    "    # add text with quartile values\n",
+    "    axs[row, col].text(0.95, 0.95, f\"Q1: {q1:.2f}\\nMed: {median:.2f}\\nQ3: {q3:.2f}\",\n",
+    "                        transform=axs[row, col].transAxes, ha=\"right\", va=\"top\")\n",
+    "\n",
+    "    # add sample density along right axis\n",
+    "    kde = gaussian_kde(param_values)\n",
+    "    x_vals = np.linspace(min(param_values), max(param_values), 100)\n",
+    "    axs[row, col].twinx().plot(kde(x_vals), x_vals, color='red')\n",
+    "    axs[row, col].set_ylim(min(param_values), max(param_values))\n",
+    "\n",
+    "# remove any unused subplots\n",
+    "for i in range(len(param_names), n_rows*n_cols):\n",
+    "    row = i // n_cols\n",
+    "    col = i % n_cols\n",
+    "    fig.delaxes(axs[row, col])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
