--- a/2-TrainModel.ipynb
+++ b/2-TrainModel.ipynb
@@ -375,13 +375,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from utils.training import train_model_full\n",
+    "from utils.training import block_cv_splits, optimize_params\n",
+    "from utils.datasets import Dataset, DataCollection, MLCollection\n",
+    "from utils.geodata import drop_XY_NAs\n",
+    "from utils.dataset_tools import Unit\n",
+    "from TrainModelConfig import TrainModelConfig\n",
     "\n",
+    "\n",
+    "config = TrainModelConfig(debug=True)\n",
     "\n",
     "if config.DEBUG:\n",
-    "    from utils.training import block_cv_splits, optimize_params\n",
+    "    %load_ext autoreload\n",
+    "    %autoreload 2\n",
+    "    \n",
+    "    res = 0.5\n",
+    "    y_transform = \"exp_ln\"\n",
+    "\n",
+    "    inat_orig = Dataset(\n",
+    "        res=res,\n",
+    "        unit=Unit.DEGREE,\n",
+    "        collection_name=config.iNat_name,\n",
+    "        transform=y_transform,\n",
+    "    )\n",
+    "\n",
+    "    wc = Dataset(\n",
+    "        res=res,\n",
+    "        unit=Unit.DEGREE,\n",
+    "        collection_name=config.WC_name,\n",
+    "    )\n",
+    "\n",
+    "    X = DataCollection([wc])\n",
+    "    Y = DataCollection([inat_orig])\n",
+    "\n",
+    "    print(\"\\nPreparing data...\")\n",
+    "    print(\"X:\")\n",
+    "    for dataset in X.datasets:\n",
+    "        print(\"    \", dataset.collection_name.short)\n",
+    "\n",
+    "    print(\"Y:\")\n",
+    "    for dataset in Y.datasets:\n",
+    "        print(\"    \", dataset.collection_name.short)\n",
+    "\n",
+    "    # Convert to MLCollection for training\n",
+    "    XY = MLCollection(X, Y)\n",
+    "    XY.drop_NAs(verbose=1)\n",
     "\n",
     "    y_col = XY.Y.cols[0]\n",
     "\n",
@@ -393,26 +434,30 @@
     "    coords = Xy[\"geometry\"]\n",
     "\n",
     "    X_train, X_test, y_train, y_test, coords_train, coords_test = train_test_split(\n",
-    "        X, y, coords, test_size=0.2\n",
+    "        X, y, coords, test_size=0.2, random_state=config.training_config.random_state\n",
     "    )\n",
     "\n",
     "    cv = block_cv_splits(\n",
     "        X=X_train,\n",
     "        coords=coords_train,\n",
     "        grid_size=config.training_config.cv_grid_size,\n",
-    "        n_groups=config.training_config.cv_n_groups,\n",
+    "        n_groups=10,\n",
     "        random_state=config.training_config.random_state,\n",
     "        verbose=1,\n",
     "    )\n",
-    "\n",
+    "    id = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "    save_dir = config.training_config.results_dir / \"ray-results\" / id\n",
+    "    save_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
     "    reg = optimize_params(\n",
     "        X=X_train,\n",
     "        y=y_train,\n",
     "        col_name=y_col,\n",
     "        cv=cv,\n",
-    "        save_dir=config.training_config.results_dir,\n",
-    "        n_trials=config.training_config.search_n_trials,\n",
+    "        save_dir=save_dir,\n",
+    "        n_trials=200,\n",
     "        random_state=config.training_config.random_state,\n",
+    "        max_iters=13,\n",
     "        verbose=1,\n",
     "    )\n",
     "\n",
