update modis to contain multiyear calendar month averages

--- a/1-Preprocessing.ipynb
+++ b/1-Preprocessing.ipynb
@@ -33,7 +33,6 @@
                 "import ee\n",
                 "import rioxarray as riox\n",
                 "import utils.geodata as geodata\n",
-                "# import utils.gee as gee\n",
                 "import utils.gdal as gdal\n",
                 "from PreprocessingConfig import PreprocessingConfig\n",
                 "from tqdm.notebook import tqdm\n",
@@ -43,9 +42,6 @@
                 "\n",
                 "%load_ext autoreload\n",
                 "%autoreload 2\n",
-                "\n",
-                "# ee.Authenticate() # Uncomment if not already authenticated\n",
-                "# ee.Initialize()\n",
                 "\n",
                 "# Load configuration\n",
                 "config = PreprocessingConfig()"
@@ -227,10 +223,21 @@
             "outputs": [],
             "source": [
                 "if config.gee_export:\n",
-                "    # Get MODIS Terra Surface Reflectance image collection for its first year of operation\n",
+                "    import utils.gee as gee\n",
+                "\n",
+                "    # ee.Authenticate() # Uncomment if not already authenticated\n",
+                "    ee.Initialize()\n",
+                "\n",
+                "    # Get MODIS Terra Surface Reflectance image collection for its first five years of operation\n",
                 "    # (2000-03-01 - 2001-03-01)\n",
-                "    ds, de = \"2000-03-01\", \"2001-03-02\"\n",
-                "    bands = [\"sur_refl_b01\", \"sur_refl_b02\", \"sur_refl_b03\", \"sur_refl_b04\", \"sur_refl_b05\"]\n",
+                "    ds, de = \"2000-03-01\", \"2005-03-02\"\n",
+                "    bands = [\n",
+                "        \"sur_refl_b01\",\n",
+                "        \"sur_refl_b02\",\n",
+                "        \"sur_refl_b03\",\n",
+                "        \"sur_refl_b04\",\n",
+                "        \"sur_refl_b05\",\n",
+                "    ]\n",
                 "    modis_tsr = ee.ImageCollection(\"MODIS/061/MOD09GA\").filterDate(ds, de)\n",
                 "\n",
                 "    # Mask clouds\n",
@@ -242,10 +249,28 @@
                 "    for band in bands:\n",
                 "        monthly = gee.aggregate_ic(modis_tsr_masked.select(band), ds, de)\n",
                 "        tsr_bands_monthly.append(monthly)\n",
-                "        \n",
+                "\n",
+                "    tsr_monthly_means = []\n",
+                "    for band_ic in tsr_bands_monthly:\n",
+                "        tsr_monthly_means.append(gee.aggregate_ic_monthly(band_ic, ds, de))\n",
+                "\n",
+                "    for i, band_ic in enumerate(tsr_monthly_means):\n",
+                "        tsr_monthly_means[i] = band_ic.map(lambda x: x.toInt16())\n",
+                "\n",
+                "    # Combine the five bands into a single image collection\n",
+                "    tsr_monthly_means = (\n",
+                "        tsr_monthly_means[0]\n",
+                "        .combine(tsr_monthly_means[1])\n",
+                "        .combine(tsr_monthly_means[2])\n",
+                "        .combine(tsr_monthly_means[3])\n",
+                "        .combine(tsr_monthly_means[4])\n",
+                "    )\n",
+                "    proj = ee.Projection(\"EPSG:4326\").getInfo()\n",
+                "\n",
                 "    # Export images to Google Drive\n",
-                "    for band in tsr_bands_monthly:\n",
-                "        gee.export_collection(band, \"MODIS\")"
+                "    gee.export_collection(\n",
+                "        tsr_monthly_means, \"multiband_monthly_averages\", proj, scale=1000\n",
+                "    )"
             ]
         },
         {
